cam-makes-a-website-project/style.css
@import url("https://use.typekit.net/jmk3xov.css");

* {
  box-sizing: border-box;
}

.navbar ul {
  list-style-type: none;
  background-color: hsl(0, 0%, 0%);
  padding: 0px;
  margin: 0px;
  overflow: hidden;
}

.navbar a {
  color: white;
  text-decoration: none;
  padding: 15px;
  display: block;
  text-align: center;
}

.navbar a:hover {
  background-color: hsl(0, 0%, 50%);
}

.navbar li {
  float: left;
}

.navbar {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  z-index: 100;

}
 /* figure out footer */
.footer {
  background-color: hsl(0, 0%, 0%);
  position: fixed;
  bottom: 0px;
  left: 0px;
  width: 100%;
  z-index: 100;
}

.footerContainer {
  width: 100%;
  padding: 70px, 30px, 20px;
}

.socialIcons {
  display: flex;
  justify-content: center;
}

.socialIcons a {
  text-decoration: none;
  padding: 10px;
  background-color: white;
  margin: 10px;
  border-radius: 50%;
}

.socialIcons a i {
  font-size: 2em;
  color: black;
  opacity: 0.9;
}

/* Hover effect for social icons */
.socialIcons a:hover {
  background-color: #111;
  transition: 0.5s;
}

.socialIcons a:hover i {
  color: white;
  transition: 0.5s;
}

.footerNav {
  margin: 0px;
}

.footerNav ul {
  display: flex;
  justify-content: center;
  list-style-type: none;
}

.footerNav ul li a{
  color: white;
  margin: 20px;
  text-decoration: none;
  font-size: 1.3em;
  opacity: 0.7;
  transition: 0.5s;
}

.footerNav ul li a:hover {
  opacity: 1;
}

.footerBottom {
  background-color: hsl(0, 0%, 0%);
  padding: 20px;
  text-align: center;
}

.footerBottom p {
  color: white;
}

.designer {
  opacity: 0.7;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 400;
  margin: 0px 5px;
}

@media (max-width: 700px){
  .footerNav ul {
    flex-direction: column;
  }
  .footerNav ul li {
    width: 100%;
    text-align: center;
    margin: 10px;
  }
}

canvas {
  position: fixed;
  top: 0;
  left: 0;
}

:root {
  --dark-bg: rgba(15, 15, 15, 0.95);
  --spacing: 350px;

  font-family: brandon-grotesque, sans-serif;
  font-weight: 400;
  font-style: normal;
}

main {
  width: 100vw;
  color: white;
  z-index: 99;
  position: absolute;
  width: 100%;
  margin: 0px auto;
  padding: 120px 0px;
  
  display: grid;
  grid-template-columns: repeat(12, 1fr);
}

h1, h2, h3, blockquote {
  font-family: elevon, sans-serif;
  font-weight: 700;
  font-style: normal;
}

header {
  background: var(--dark-bg);
  grid-column: 2 / span 6;
  font-size: 2.5rem;
  padding: 4rem;
  margin-bottom: var(--spacing);
  border-radius: 1.2rem;
}

section {
  grid-column: 2 / 8;
  padding: 1rem;
  background: var(--dark-bg);
  font-size: 1.25rem;
  line-height: 1.5;
  margin-bottom: var(--spacing);
  border-radius: 1.2rem;
}

blockquote {
  margin: 0;
  padding: 0;
  grid-column: 2 / span 9;
  margin-bottom: var(--spacing);
}

blockquote p {
  color: black;
  background-color: white;
  font-size: 4rem;
  display: inline;
  line-height: 1;
}

.left {
  grid-column: 6 / 12;
}

